fix(core): text-rendering en optimizeLegibility [DS-1834] (#37)
* fix(core): text-rendering en optimizeLegibility

* fix(core): inputs en text rendering optimizeLegibility

--- a/src/core/styles/reset/module/_body.scss
+++ b/src/core/styles/reset/module/_body.scss
@@ -6,7 +6,7 @@
 @if (map-get($reset-settings, body)) {
   body {
     @include font-family;
-    text-rendering: optimizeSpeed;
+    text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
